# AI_Vibe_Coded_GEGL_Plugins

./: README.md  vibe_coded_source_code.zip 
AI_plugins/: clean_build_folders.sh  clean_everything.sh  wrap_all_code.sh
AI_plugins/candy_spiral/: candyspiral.c  meson.build
AI_plugins/color_cubes_1/: colorcubes1.c  meson.build
AI_plugins/color_cubes_2/: build_plugin_linux.sh  build_plugin_windows.sh  colorcubes2.c  grab_code.sh  meson.build
AI_plugins/hawaiian_flowers_1/: hawaiian_flowers_1.c
AI_plugins/hawaiian_flowers_2/: build_plugin_linux.sh  build_plugin_windows.sh  grab_code.sh  hawaiian_flowers_2.c
code/hawaiian_flowers_2/: hawaiian_flowers_2.c
code/hawaiin_flowers_1/: hawaiian_flowers_1.c  hawaiin_flowers_1.c
hawaiian_flowers/hawaiian_flowers_2/: meson.build
hawaiian_flowers/hawaiin_flowers_1/: hawaiian_flowers_1.c  meson.build
